--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <h1>Simulador de Préstamos</h1>
+        <h1>Credi-croto</h1>
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre">
         <label for="cantidad">Cantidad de Préstamo:</label>
